--- a/iconos.css
+++ b/iconos.css
@@ -40,20 +40,23 @@
 }
 
 body {
-    
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: center; 
+
+    font-family: 'Cormorant', serif;
+    text-align: center;
     background-color: rgb(24, 35, 41);
     color: white;
 }
-h1{
+
+h1 {
     text-align: center;
     color: black;
     background-color: rgb(171, 255, 14);
     margin-left: 20%;
     margin-right: 20%;
+    font-family: 'Rubik', sans-serif;
 }
-h2{
+
+h2 {
     text-align: center;
     background-color: rgb(38, 51, 58);
     color: rgb(171, 255, 14);
@@ -71,6 +74,7 @@ h2{
     margin-right:25% ;
     padding: 10px 
 }
+
 ul{
     list-style: none;
 }
